--- a/bookmarks.7
+++ b/bookmarks.7
@@ -4,12 +4,14 @@ bookmarks \- lets you bookmark lines of code to return to later.
 .SH CONFIGURATION
 .SS bookmark-character: the character that shows if there is a bookmark on the line.
 .SH COMMANDS
-.SS set-bookmark:[int row] sets a new bookmark at the row given as an argument.
-.SS set-bookmark-on-line: sets a new bookmark at the current row.
+.SS set-bookmark: [int row] sets a new bookmark at the row given as an argument.
 .SS remove-bookmark: [int row] removes the bookmark at the row given as an argument.
+.SS set-bookmark-on-line: sets a new bookmark at the current row.
 .SS remove-bookmark-on-line: removes the bookmark at the current row.
-.SS goto-next-bookmark-in-buffer: moves the cursor to the next bookmarked line.
-.SS goto-prev-bookmark-in-buffer: moves the cursor to the previous bookmarked line.
+.SS goto-next-bookmark: moves the cursor to the next bookmarked line.
+.SS goto-prev-bookmark: moves the cursor to the previous bookmarked line.
+.SS goto-next-bookmark-in-buffer: moves the cursor to the next bookmarked line in the buffer.
+.SS goto-prev-bookmark-in-buffer: moves the cursor to the previous bookmarked line in the buffer.
 .SH BUFFERS
 None
 .SH NOTES
