--- a/bookmarks.7
+++ b/bookmarks.7
@@ -8,12 +8,14 @@ bookmarks \- lets you bookmark lines of code to return to later.
 .SS remove-bookmark: [int row] removes the bookmark at the row given as an argument.
 .SS set-bookmark-on-line: sets a new bookmark at the current row.
 .SS remove-bookmark-on-line: removes the bookmark at the current row.
+.SS remove-all-bookmarks-in-buffer: removes all the bookmarks in the current buffer.
 .SS goto-next-bookmark: moves the cursor to the next bookmarked line.
 .SS goto-prev-bookmark: moves the cursor to the previous bookmarked line.
 .SS goto-next-bookmark-in-buffer: moves the cursor to the next bookmarked line in the buffer.
 .SS goto-prev-bookmark-in-buffer: moves the cursor to the previous bookmarked line in the buffer.
+.SS bookmarks: opens the bookmarks special buffer.
 .SH BUFFERS
-None
+.SS *bookmarks-list
 .SH NOTES
 .P None
 .SH VERSION
